cluster-configs/ingress-argocd.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-argocd
    nginx.ingress.kubernetes.io/app-root: /login
    cert-manager.io/acme-challenge-type: http01
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - argocd.aitdevops.com  # Replace with your domain
    secretName: argocd-tls  # This should match the secret name used by ArgoCD
  rules:
  - host: argocd.aitdevops.com  # Replace with your domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: https
