cluster-configs/ingress-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-frontend
    cert-manager.io/acme-challenge-type: http01
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - aitdevops.com
    secretName: frontend-tls
  rules:
  - host: aitdevops.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aitdevops-site
            port:
              number: 80
