cluster-configs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
spec:
  tls:
  - hosts:
    - auth.aitdevops.com
    - user.aitdevops.com
    - approval.aitdevops.com
    secretName: backend-tls # This secret will be created by Cert-Manager
  rules:
  - host: auth.aitdevops.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 3001
  - host: user.aitdevops.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 3002
  - host: approval.aitdevops.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: approval-service
            port:
              number: 3003
